--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,6 @@ jobs:
             version: 'latest'
         - name: Déployer sur Kubernetes
           run: |
-            kubectl set image deployment/hello-world-node hello-world-node=coldman47/crv-ci_cd:latest --record
+            kubectl set image deployment/coldspot.com coldspot.com=coldman47/crv-ci_cd:latest --record
           env:
             KUBECONFIG: ${{ secrets.KUBECONFIG }}
