--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,8 @@ jobs:
           run: |
             # Run kubectl commands like deploy, get pods, etc.
             kubectl apply -f ./deployment.yaml
+        
+         # Step 5: Verify the deployment (optional)
+        - name: Check Pods in Kubernetes
+          run: |
             kubectl get pods
