use minikube context

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         - name: Set kubectl context
           run: |
             kubectl config use-context minikube
+            cat ~/.kube/config
             # Set kubeconfig for kubectl to use Minikube's
             echo $(kubectl config view) > ~/.kube/config
 
