--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,13 @@ jobs:
 
         # Step 4: Deploy to Minikube
         - name: Deploy to Minikube
-          # env:
-          #     KUBECONFIG: ${{ secrets.KUBECONFIG }}
           run: |
             # Run kubectl commands like deploy, get pods, etc.
             kubectl apply -f ./deployment.yml
+
+        - name: Déployer sur Kubernetes
+          run: |
+            kubectl set image deployment/coldspot.com coldspot.com=coldman47/crv-ci_cd:latest --record
         
          # Step 5: Verify the deployment (optional)
         - name: Check Pods in Kubernetes
