--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
           run: |
             # Run kubectl commands like deploy, get pods, etc.
             kubectl apply -f ./deployment.yml
+            kubectl apply -f ./service.yml
         
          # Step 5: Verify the deployment (optional)
         - name: Check Pods in Kubernetes
