--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,4 +59,5 @@ jobs:
         - name: Check Pods in Kubernetes
           run: |
             kubectl get deployments
+            kubectl get svc
             kubectl get pods
