deploy on kubernetes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,3 +61,4 @@ jobs:
             kubectl get deployments
             kubectl get svc
             kubectl get pods
+            minikube service crv-cicd
