--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           run: |
             # Run kubectl commands like deploy, get pods, etc.
             kubectl apply -f ./deployment.yml
-            sleep 30
+            sleep 5
             kubectl apply -f ./service.yml
         
          # Step 5: Verify the deployment (optional)
@@ -62,4 +62,4 @@ jobs:
             kubectl get deployments
             kubectl get svc
             kubectl get pods
-            minikube service crv-cicd
+            minikube service crv-cicd --url=false
